[package]
name = "PIjN_port_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
once_cell = "1.21.3"
serde_json = "1.0.140"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
sysinfo = "0.35.1" 
tokio = { version = "1.38", features = ["time"] }